2006-08-04  Robert Schuster  <robertschuster@fsfe.org>
	Reported by Henrik Gulbrandsen <henrik@gulbra.net>
        Fixes PR27864.
        * gnu/xml/dom/DomIterator.java:
        (successor): Added if-statement.

2006-08-04  Mark Wielaard  <mark@klomp.org>

	* scripts/Makefile.am (EXTRA_DIST): Add import-cacerts.sh.

2006-08-04  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/metal/MetalMenuBarUI.java:
	(update): Check size and paint smaller gradient.
	* javax/swing/plaf/metal/MetalBorders.java:
	(MenuBarBorder): Removed borderColor field.
	(MenuBarBorder.paintBorder): Added note, fetch color from UIManager or
	MetalLookAndFeel.

2006-08-03  Roman Kennke  <kennke@aicas.com>

	PR 27637
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(ComponentHandler.componentResized): Reimplemented to handle
	arbitrary parents.
	(InternalFramePropertyChangeHandler.propertyChange): (Un)install
	component listener on changed ancestor.
	(installListeners): Install componentListener.
	(uninstallListeners): Uninstall componentListener.

2006-08-03  Carsten Neumann  <cn-develop@gmx.net>

	* StrictMath.java (cbrt): Return argument if it is a NaN.
	(cosh): Likewise.
	(expm1): Likewise.
	(sinh): Likewise.

2006-08-03  Carsten Neumann  <cn-develop@gmx.net>

	* java/lang/StrictMath.java (tanh): New method.

2006-08-03  Raif S. Naffah  <raif@swiftdsl.com.au>

	* scripts/import-cacerts.sh: Batch CA certificates import script.

2006-08-03  Roman Kennke  <kennke@aicas.com>

	PR 28571
	* gnu/java/awt/peer/gtk/GtkCanvasPeer.java
	(getPreferredSize): Renamed method to preferredSize(). That's
	the one that gets called from java.awt.*.
	* java/awt/peer/ComponentPeer.java
	(getPreferredSize): Added specnote about this method never
	beeing called in the RI.
	(getMinimumSize): Added specnote about this method never
	beeing called in the RI.

2006-08-03  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(grab, nativeGrab): New methods.